# TexasRed_v2

./: CMakeLists.txt  README.md  Settings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  regexhighlighter.cpp  regexsandboxpage.cpp  regexsandboxpage.h
emaToObj TestData/: ElectricalCabinet.ema
src/: resources.qrc
src/ascii/: texas_red_title.txt
src/core/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/pages/: emato3dconverterpage.cpp  emato3dconverterpage.h  emato3dconverterpage.ui  logfileanalyzerpage.cpp  logfileanalyzerpage.h  logfileanalyzerpage.ui  portscannerpage.cpp  portscannerpage.h  portscannerpage.ui  regexsandboxpage.cpp  regexsandboxpage.h  regexsandboxpage.ui
src/styles/: dark.qss  light.qss
src/utils/: emato3dparser.cpp  emato3dparser.h  regexhighlighter.cpp  regexhighlighter.h
